--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ h1, h2, h3 {
 }
 
 .navbar {
-  background-color: #abd31c;
+  /* background-color: #abd31c; */
+    background-color:#F7DD67;
 }
 .navbar .fa-shopping-cart {
   font-size: 2rem;
