--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@ h1, h2, h3 {
   color: #3046C5;
 }
 
+.navbar-text {
+  padding-left: 45px;
+  margin-left: auto;
+  margin-right: 40px;
+}
+
 #loginButton{
   font-size: 0.65rem;
 }
